--- a/signature-apparel-premiere.html
+++ b/signature-apparel-premiere.html
@@ -693,7 +693,7 @@ html, body {
             <a href="store.html">Store</a>
             <a href="music.html">MUSIC</a>
             <a href="about.html">About</a>
-            <a href="checkout.html">Checkout</a>
+            <a href="store.html">Checkout</a>
         </div>
     </div>
 </nav>
@@ -729,7 +729,7 @@ html, body {
         </div>
 
         <div class="hero-stage" id="heroStage">
-            <img class="hero-img hero-drift" id="heroImg" src="ModelPictures/PatchBabyJogger.png" alt="">
+            <img loading=\"lazy\" class="hero-img hero-drift" id="heroImg" src="ModelPictures/PatchBabyJogger.png" alt="">
             <div class="hero-hit" id="heroHit"></div>
             <div class="cue" id="cue"><strong>TAP</strong> TO VIEW MOCKUPS</div>
         </div>
@@ -787,7 +787,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysjogger/pompombeanie.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysjogger/pompombeanie.png" alt="">
                     <div class="card-meta">
                         <h4>POM POM BEANIE</h4>
                         <div class="price-row">
@@ -795,7 +795,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
+                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -803,7 +803,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysjogger/sweatshirtfront.png" alt="">
                     <div class="card-meta">
                         <h4>SWEATSHIRT — FRONT</h4>
                         <div class="price-row">
@@ -811,7 +811,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
+                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -819,7 +819,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysjogger/sweatshirtback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysjogger/sweatshirtback.png" alt="">
                     <div class="card-meta">
                         <h4>SWEATSHIRT — BACK</h4>
                         <div class="price-row">
@@ -827,7 +827,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
+                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -835,7 +835,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysjogger/sweatshirtside.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysjogger/sweatshirtside.png" alt="">
                     <div class="card-meta">
                         <h4>SWEATSHIRT — SIDE</h4>
                         <div class="price-row">
@@ -843,7 +843,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
+                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -851,7 +851,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysjogger/joggerpantsfront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysjogger/joggerpantsfront.png" alt="">
                     <div class="card-meta">
                         <h4>JOGGER PANTS — FRONT</h4>
                         <div class="price-row">
@@ -859,7 +859,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
+                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -867,7 +867,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysjogger/joggerpantsback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysjogger/joggerpantsback.png" alt="">
                     <div class="card-meta">
                         <h4>JOGGER PANTS — BACK</h4>
                         <div class="price-row">
@@ -875,7 +875,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
+                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -888,7 +888,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysjogger/beanie.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysjogger/beanie.png" alt="">
                     <div class="card-meta">
                         <h4>BEANIE</h4>
                         <div class="price-row">
@@ -896,7 +896,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
+                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -904,7 +904,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysjogger/boyssweatshirtfront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysjogger/boyssweatshirtfront.png" alt="">
                     <div class="card-meta">
                         <h4>SWEATSHIRT — FRONT</h4>
                         <div class="price-row">
@@ -912,7 +912,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
+                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -920,7 +920,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysjogger/boysweatshirtback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysjogger/boysweatshirtback.png" alt="">
                     <div class="card-meta">
                         <h4>SWEATSHIRT — BACK</h4>
                         <div class="price-row">
@@ -928,7 +928,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
+                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -936,7 +936,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysjogger/boyssweatshirtside.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysjogger/boyssweatshirtside.png" alt="">
                     <div class="card-meta">
                         <h4>SWEATSHIRT — SIDE</h4>
                         <div class="price-row">
@@ -944,7 +944,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
+                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -952,7 +952,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysjogger/boyssweatpantsfront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysjogger/boyssweatpantsfront.png" alt="">
                     <div class="card-meta">
                         <h4>JOGGER PANTS — FRONT</h4>
                         <div class="price-row">
@@ -960,7 +960,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
+                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -968,7 +968,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysjogger/boyssweatpantsback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysjogger/boyssweatpantsback.png" alt="">
                     <div class="card-meta">
                         <h4>JOGGER PANTS — BACK</h4>
                         <div class="price-row">
@@ -976,7 +976,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
+                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -1111,6 +1111,36 @@ viewAllBtn.addEventListener("click", (e) => {
     e.preventDefault();
     e.stopPropagation();
     openModal();
+});
+</script>
+
+
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    const lockDate = new Date("2026-02-02");
+    const now = new Date();
+    
+    // Update all buy buttons to say COMING FEB 2ND
+    document.querySelectorAll(".buy-btn").forEach(btn => {
+        if (now < lockDate) {
+            btn.textContent = "COMING FEB 2ND";
+            btn.disabled = true;
+            btn.style.cursor = "not-allowed";
+            btn.style.opacity = "0.5";
+            // Remove the onclick if locked
+            btn.onclick = null;
+        } else {
+            btn.textContent = "SHOP THIS LOOK";
+            btn.disabled = false;
+            btn.style.cursor = "pointer";
+            btn.style.opacity = "1";
+        }
+    });
+
+    // Update availability messages
+    document.querySelectorAll(".avail-msg").forEach(msg => {
+        msg.textContent = "AVAILABLE FEBRUARY 2, 2026";
+    });
 });
 </script>
 
