--- a/signature-apparel-premiere.html
+++ b/signature-apparel-premiere.html
@@ -795,7 +795,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
+                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -811,7 +811,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
+                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -827,7 +827,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
+                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -843,7 +843,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
+                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -859,7 +859,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
+                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -875,7 +875,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
+                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -896,7 +896,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
+                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -912,7 +912,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
+                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -928,7 +928,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
+                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -944,7 +944,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
+                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -960,7 +960,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
+                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -976,7 +976,7 @@ html, body {
                             <div class="disabled-note">PREVIEW</div>
                         </div>
                         <div class="buy-row">
-                            <button class="buy-btn" onclick="window.location.href='store.html'" data-avail="Available January 15, 2026">SHOP THIS LOOK</button>
+                            <button class="buy-btn" data-avail="Available January 15, 2026">BUY (DISABLED)</button>
                         </div>
                         <div class="avail-msg">AVAILABLE JANUARY 15, 2026</div>
                     </div>
@@ -1115,25 +1115,63 @@ viewAllBtn.addEventListener("click", (e) => {
 </script>
 
 
+<div id="mini-cart" style="display:none; position:fixed; top:80px; right:20px; width:320px; background:#000; border:1px solid rgba(212,175,55,0.6); z-index:9999; padding:16px;">
+  <h4 style="letter-spacing:0.28em; font-size:0.7rem;">CART</h4>
+  <div id="mini-cart-items"></div>
+  <button type="button" class="btn-checkout" style="margin-top:12px; width:100%; border:1px solid rgba(212,175,55,0.6); background:transparent; color:#f3d688; padding:10px; cursor:pointer;">CHECKOUT</button>
+</div>
+<div id="cart-toast" style="position:fixed; bottom:20px; right:20px; background:#000; border:1px solid rgba(212,175,55,0.6); color:#f3d688; padding:12px 18px; letter-spacing:0.28em; display:none; z-index:9999;"></div>
+
+
 <script>
+// SHOPIFY CART LOGIC
+function addToCart(variantId) {
+  console.log("Adding to cart:", variantId);
+  // Your existing Shopify cart logic would go here
+  showToast("ADDED TO CART");
+}
+
+function showToast(msg) {
+  const toast = document.getElementById("cart-toast");
+  toast.textContent = msg;
+  toast.style.display = "block";
+  setTimeout(() => { toast.style.display = "none"; }, 2000);
+}
+
 document.addEventListener("DOMContentLoaded", () => {
     const lockDate = new Date("2026-02-02");
     const now = new Date();
     
-    // Update all buy buttons to say COMING FEB 2ND
-    document.querySelectorAll(".buy-btn").forEach(btn => {
+    // Assign Variant IDs to buttons (Example mapping based on your store)
+    const variantMap = {
+        "POM POM BEANIE": "gid://shopify/ProductVariant/52764430729534",
+        "SWEATSHIRT — FRONT": "gid://shopify/ProductVariant/52764431679806",
+        "SWEATSHIRT — BACK": "gid://shopify/ProductVariant/52764431679806",
+        "JOGGER PANTS — FRONT": "gid://shopify/ProductVariant/52764432793918",
+        "JOGGER PANTS — BACK": "gid://shopify/ProductVariant/52764432793918",
+        "BEANIE": "gid://shopify/ProductVariant/52764435808574",
+        "BOY SWEATSHIRT — FRONT": "gid://shopify/ProductVariant/52764439052606",
+        "BOY JOGGER PANTS — FRONT": "gid://shopify/ProductVariant/52764441018686"
+    };
+
+    document.querySelectorAll(".gallery-card").forEach(card => {
+        const title = card.querySelector("h4").textContent.trim();
+        const btn = card.querySelector(".buy-btn");
+        const variantId = variantMap[title];
+
         if (now < lockDate) {
             btn.textContent = "COMING FEB 2ND";
             btn.disabled = true;
             btn.style.cursor = "not-allowed";
             btn.style.opacity = "0.5";
-            // Remove the onclick if locked
-            btn.onclick = null;
         } else {
-            btn.textContent = "SHOP THIS LOOK";
+            btn.textContent = "ADD TO CART";
             btn.disabled = false;
             btn.style.cursor = "pointer";
             btn.style.opacity = "1";
+            btn.addEventListener("click", () => {
+                if (variantId) addToCart(variantId);
+            });
         }
     });
 
