--- a/signature-apparel-premiere2.html
+++ b/signature-apparel-premiere2.html
@@ -693,7 +693,7 @@ html, body {
             <a href="store.html">Store</a>
             <a href="music.html">MUSIC</a>
             <a href="about.html">About</a>
-            <a href="checkout.html">Checkout</a>
+            <a href="store.html">Checkout</a>
         </div>
     </div>
 </nav>
@@ -729,7 +729,7 @@ html, body {
         </div>
 
         <div class="hero-stage" id="heroStage">
-            <img class="hero-img hero-drift" id="heroImg" src="ModelPictures/patchbabystreetwear.png" alt="">
+            <img loading=\"lazy\" class="hero-img hero-drift" id="heroImg" src="ModelPictures/patchbabystreetwear.png" alt="">
             <div class="hero-hit" id="heroHit"></div>
             <div class="cue" id="cue"><strong>TAP</strong> TO VIEW MOCKUPS</div>
         </div>
@@ -787,7 +787,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysstreetwear/pbfittedcap1.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/pbfittedcap1.png" alt="">
                     <div class="card-meta">
                         <h4>FITTED CAP</h4>
                         <div class="price-row">
@@ -803,7 +803,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysstreetwear/pbfittedcap2.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/pbfittedcap2.png" alt="">
                     <div class="card-meta">
                         <h4>FITTED CAP</h4>
                         <div class="price-row">
@@ -818,7 +818,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodiefront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodiefront.png" alt="">
                     <div class="card-meta">
                         <h4>CROP HOODIE — FRONT</h4>
                         <div class="price-row">
@@ -834,7 +834,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodieback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodieback.png" alt="">
                     <div class="card-meta">
                         <h4>CROP HOODIE — BACK</h4>
                         <div class="price-row">
@@ -849,7 +849,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodieleft.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodieleft.png" alt="">
                     <div class="card-meta">
                         <h4>CROP HOODIE — LEFT</h4>
                         <div class="price-row">
@@ -864,7 +864,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodieright.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodieright.png" alt="">
                     <div class="card-meta">
                         <h4>CROP HOODIE — RIGHT</h4>
                         <div class="price-row">
@@ -879,7 +879,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbwomansyogafront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbwomansyogafront.png" alt="">
                     <div class="card-meta">
                         <h4>YOGA PANTS — FRONT</h4>
                         <div class="price-row">
@@ -895,7 +895,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbwomansyogaback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbwomansyogaback.png" alt="">
                     <div class="card-meta">
                         <h4>YOGA PANTS — BACK</h4>
                         <div class="price-row">
@@ -915,7 +915,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbsnapback1.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbsnapback1.png" alt="">
                     <div class="card-meta">
                         <h4>SNAPBACK</h4>
                         <div class="price-row">
@@ -931,7 +931,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbsnapback2.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbsnapback2.png" alt="">
                     <div class="card-meta">
                         <h4>SNAPBACK</h4>
                         <div class="price-row">
@@ -946,7 +946,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbmenshoodiefront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbmenshoodiefront.png" alt="">
                     <div class="card-meta">
                         <h4>HOODIE — FRONT</h4>
                         <div class="price-row">
@@ -962,7 +962,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbmenshoodieback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbmenshoodieback.png" alt="">
                     <div class="card-meta">
                         <h4>HOODIE — BACK</h4>
                         <div class="price-row">
@@ -977,7 +977,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbmenshoodieleftside.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbmenshoodieleftside.png" alt="">
                     <div class="card-meta">
                         <h4>HOODIE — LEFT</h4>
                         <div class="price-row">
@@ -992,7 +992,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbmensshortsfront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbmensshortsfront.png" alt="">
                     <div class="card-meta">
                         <h4>SWEAT SHORTS — FRONT</h4>
                         <div class="price-row">
@@ -1008,7 +1008,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/patchbabysstreetwear/Pbmensshortsback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/patchbabysstreetwear/Pbmensshortsback.png" alt="">
                     <div class="card-meta">
                         <h4>SWEAT SHORTS — BACK</h4>
                         <div class="price-row">
@@ -1153,7 +1153,76 @@ viewAllBtn.addEventListener("click", (e) => {
 });
 </script>
 
+
+<div id="mini-cart" style="display:none; position:fixed; top:80px; right:20px; width:320px; background:#000; border:1px solid rgba(212,175,55,0.6); z-index:9999; padding:16px;">
+  <h4 style="letter-spacing:0.28em; font-size:0.7rem;">CART</h4>
+  <div id="mini-cart-items"></div>
+  <button type="button" class="btn-checkout" style="margin-top:12px; width:100%; border:1px solid rgba(212,175,55,0.6); background:transparent; color:#f3d688; padding:10px; cursor:pointer;">CHECKOUT</button>
+</div>
+<div id="cart-toast" style="position:fixed; bottom:20px; right:20px; background:#000; border:1px solid rgba(212,175,55,0.6); color:#f3d688; padding:12px 18px; letter-spacing:0.28em; display:none; z-index:9999;"></div>
+
+
+<script>
+// SHOPIFY CART LOGIC
+function addToCart(variantId) {
+  console.log("Adding to cart:", variantId);
+  // Your existing Shopify cart logic would go here
+  showToast("ADDED TO CART");
+}
+
+function showToast(msg) {
+  const toast = document.getElementById("cart-toast");
+  toast.textContent = msg;
+  toast.style.display = "block";
+  setTimeout(() => { toast.style.display = "none"; }, 2000);
+}
+
+document.addEventListener("DOMContentLoaded", () => {
+    const lockDate = new Date("2026-02-02");
+    const now = new Date();
+    
+    // Assign Variant IDs to buttons (Example mapping based on your store)
+    const variantMap = {
+        "V&P POM POM BEANIE": "gid://shopify/ProductVariant/52764320760126",
+        "SWEATSHIRT — FRONT": "gid://shopify/ProductVariant/52764324561214",
+        "SWEATSHIRT — BACK": "gid://shopify/ProductVariant/52764324561214",
+        "JOGGER PANTS — FRONT": "gid://shopify/ProductVariant/52764328427870",
+        "JOGGER PANTS — BACK": "gid://shopify/ProductVariant/52764328427870",
+        "V&P BEANIE": "gid://shopify/ProductVariant/52764332327262",
+        "BOY SWEATSHIRT — FRONT": "gid://shopify/ProductVariant/52764334522718",
+        "BOY JOGGER PANTS — FRONT": "gid://shopify/ProductVariant/52764336587102"
+    };
+
+    document.querySelectorAll(".gallery-card").forEach(card => {
+        const title = card.querySelector("h4").textContent.trim();
+        const btn = card.querySelector(".buy-btn");
+        const variantId = variantMap[title];
+
+        if (now < lockDate) {
+            btn.textContent = "COMING FEB 2ND";
+            btn.disabled = true;
+            btn.style.cursor = "not-allowed";
+            btn.style.opacity = "0.5";
+        } else {
+            btn.textContent = "ADD TO CART";
+            btn.disabled = false;
+            btn.style.cursor = "pointer";
+            btn.style.opacity = "1";
+            btn.addEventListener("click", () => {
+                if (variantId) addToCart(variantId);
+            });
+        }
+    });
+
+    // Update availability messages
+    document.querySelectorAll(".avail-msg").forEach(msg => {
+        msg.textContent = "AVAILABLE FEBRUARY 2, 2026";
+    });
+});
+</script>
+
 </body>
 </html>
 
 </html>
+
